packages/scaml.1.2.0~pre7/tests/fail/experiment_function_arg.ml
open SCaml
let main (x : int -> int) y =
  [],
  assert (x (Int 1) = Int 1)

